--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,8 @@ name: CheckPlayers
 main: com.oneshotmc.checkplayers.CheckPlayers
 version: 1
 description: Look at your players
+softdepend:
+  - SuperVanish
 commands:
   checkplayers:
     description: Check the players on your server to see if they are doing anything bad.
